tests/NormalTests/paczka2/big_fuzzy/84954738.err
Error in line 7: 6ZWJzNY S778 14,1
Error in line 9: ZRD5HJGhts A11 15,3
Error in line 21: T0UhPT S758 30,2
Error in line 25: rsQyB0JI A11 17,8
Error in line 23: T0UhPT A876 45,9
Error in line 32: rsQyB0JI S758 5,5
Error in line 35: rsQyB0JI S778 56,6
Error in line 36: A11 A876 4,3
Error in line 45: T0U~PT S758 368,5
Error in line 58: 6ZWJzNY A11 73,4
Error in line 59: 6ZWJzNY S758 36,8
Error in line 28: Ba22hx S758 10,8
Error in line 68: 6ZWJzNY S758 81,9
Error in line 64: a1LYwKEOQQ S758 70,6
Error in line 73: a1LYwKEOQQ A11 91,5
Error in line 77: a1LYwKEOQQ A876 20,7
Error in line 83: T0UhPT A11 17,9
Error in line 89: T0UhPT A876 4,7
Error in line 96: T0UhPT S758 199,87
Error in line 71: 6ZWJzNY S778 73,7
Error in line 99: rsQyB0JI A11 29,8
Error in line 116: rsQyB0JI A11 47,6
Error in line 110: Ba22hx A876 35,5
Error in line 122: Ba22hx S758 51,4
Error in line 94: T0UhPT S758 43,8
Error in line 123: Ba22hx S778 99,3
Error in line 117: ZRD5HJGhts S758 163,5
Error in line 141: rsQyB0JI S778 27,9
Error in line 148: 6ZWJzNY A876 11,5
Error in line 151: a1LYwKEOQQ S778 28,7
Error in line 155: a1LYwKEOQQ A11 43,8
Error in line 152: T0UhPT S778 25,6
Error in line 163: 6ZWJzNY S778 38,43
Error in line 166: T0UhPT S778 53,53
Error in line 157: a1LYwKEOQQ S778 53,1
Error in line 162: ZRD5HJGhts S758 11,6
Error in line 161: T0UhPT A876 80,0
Error in line 171: a1LYwKEOQQ S758 18,1
Error in line 175: A11 A11 38,1
Error in line 182: a1LYwKEOQQ A876 80,5
Error in line 179: T0UhPT S778 67,9
Error in line 170: ZRD5HJGhts A11 15,7
Error in line 181: A11 S758 1,9
Error in line 185: 6ZWJzNY S778 99,2
Error in line 197: ZRD5HJGhts A11 8,8
Error in line 202: T0UhPT S778 56,6
Error in line 212: a1LYwKEOQQ S758 19,2
Error in line 207: T0UhPT A11 1,0
Error in line 221: Ba22hx S778 44,9
Error in line 217: a1LYwKEOQQ A11 40,2
Error in line 226: a1LYwKEOQQ S758 25,0
Error in line 225: Ba22hx S758 57,0
Error in line 230: Ba22hx A876 34,7
Error in line 228: a1LYwKEOQQ A876 79,4
Error in line 244: rsQyB0JI S778 97,3
Error in line 240: A11 S778 2,1
